--- a/jsdoc_template/tmpl/layout.tmpl
+++ b/jsdoc_template/tmpl/layout.tmpl
@@ -44,7 +44,7 @@
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span2 hidden-tablet hidden-phone"> <!-- left side bar -->
-      <a id="logo" href="."><img src="img/excelplus.svg" style="width:100px"></a>
+      <a id="logo" href="."><img src="img/ExcelPlus.svg" style="width:100px"></a>
       <ul class="nav nav-list">
         <li class="nav-header">Download</li>
         <li><a href="https://github.com/Aymkdn/ExcelPlus">GitHub Repository</a></li>
